controllers/refresolver/gatewayapi/testdata/gatewayapi_gateway_no_ips.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gatewayapi-gateway
  namespace: test-gslb
spec:
  gatewayClassName: gatewayapi-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
status:
  addresses:
