controllers/refresolver/gatewayapi/testdata/gatewayapi_listenerset_same_namespace.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: local
  namespace: test-gslb
spec:
  parentRef:
    name: gatewayapi-gateway
  listeners:
  - name: app-443
    hostname: app.cloud.example.com
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: tls-app
